--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
           <div class="row">
             <div class="col-lg-4">
-              <img src="assets/img/WhatsApp Image 2021-03-06 at 15.05.25.jpeg" class="img-fluid" alt="">
+              <img src="assets/img/DSC2240.jpg" class="img-fluid" alt="">
             </div>
             <div class="col-lg-8 pt-4 pt-lg-0 content">
               <h3>Finance, Photographer &amp; Pengajar Biologi.</h3>
