--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                     <li><i class="icofont-rounded-right"></i> <strong>Nomor HP        :</strong> 082123299528</li>
                     <li><i class="icofont-rounded-right"></i> <strong>Kota            :</strong> Jakarta, Indonesia</li>
                     <li><i class="icofont-rounded-right"></i> <strong>Tinggi Badan    :</strong> 158 Cm</li>
-                    <li><i class="icofont-rounded-right"></i> <strong>Berat Badan     :</strong> 50 Kg</li>
+                    <li><i class="icofont-rounded-right"></i> <strong>Berat Badan     :</strong> 48 Kg</li>
                     <li><i class="icofont-rounded-right"></i> <strong>Sarjana         :</strong> S1 Pendidikan Fisika</li>
                     <li><i class="icofont-rounded-right"></i> <strong>Email           :</strong> liedynarti46@gmail.com</li>
                     <li><i class="icofont-rounded-right"></i> <strong>Freelance       :</strong> Bersedia</li>
@@ -154,12 +154,12 @@
 
               <!--BARIS 2-->
               <!--<div class="col-lg-6">-->
-                <div class="progress">
-                  <span class="skill">Fisika Terapan<i class="val">75%</i></span>
-                  <div class="progress-bar-wrap">
-                    <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
-                  </div>
+              <div class="progress">
+                <span class="skill">Fisika Terapan<i class="val">75%</i></span>
+                <div class="progress-bar-wrap">
+                  <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
                 </div>
+              </div>
               <!--</div>-->
               <!--BATAS BARIS 2-->
 
@@ -179,9 +179,9 @@
             <div class="col-lg-6">
 
               <div class="progress">
-                <span class="skill">Sosial<i class="val">99%</i></span>
+                <span class="skill">Sosial<i class="val">85%</i></span>
                 <div class="progress-bar-wrap">
-                  <div class="progress-bar" role="progressbar" aria-valuenow="99" aria-valuemin="0" aria-valuemax="100"></div>
+                  <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
                 </div>
               </div>
 
@@ -207,9 +207,9 @@
 
 
               <div class="progress">
-                <span class="skill">Soft Skill<i class="val">99%</i></span>
+                <span class="skill">Soft Skill<i class="val">75%</i></span>
                 <div class="progress-bar-wrap">
-                  <div class="progress-bar" role="progressbar" aria-valuenow="99" aria-valuemin="0" aria-valuemax="100"></div>
+                  <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
                 </div>
               </div>
 
@@ -290,7 +290,7 @@
               <div class="progress">
                 <span class="skill">Adobe Photoshop<i class="val">65%</i></span>
                 <div class="progress-bar-wrap">
-                  <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
+                  <div class="progress-bar" role="progressbar" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100"></div>
                 </div>
               </div>
 
@@ -310,7 +310,7 @@
               <div class="progress">
                 <span class="skill">Adobe Lightroom<i class="val">60%</i></span>
                 <div class="progress-bar-wrap">
-                  <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
+                  <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
                 </div>
               </div>
 
@@ -358,20 +358,20 @@
               <div class="resume-item">
                 <h4>Intra Kampus</h4>
                 <h5>2016 - 2017</h5>
-                <p><em>Badan Executive Mahasiswa Fakultas Teknik, Matematika dan Ilmu Pengetahuan Alam, Jakarta</em></p>
-                <p>Kepala Devisi Kominfo</p>
+                <p><em>Badan Executive Mahasiswa Fakultas Teknik, Matematika dan Ilmu Pengetahuan Alam Universitas Indraprasta PGRI, Jakarta</em></p>
+                <p>Kepala Devisi Markominfo</p>
               </div>
               <div class="resume-item">
                 <h4>Keislaman</h4>
                 <h5>2016 - 2020</h5>
-                <p><em>Himpunan Mahasiswa Islam, Jakarta</em></p>
-                <p>Ketua Bidang Advokasi</p>
+                <p><em>Himpunan Mahasiswa Islam Komisariat Fakultas Teknik dan Ilmu Pengetahuan Alam Universitas Indraprasta  PGRI, Jakarta</em></p>
+                <p>Bidang Markominfo</p>
               </div>
               <div class="resume-item">
                 <h4>Kedaerahan</h4>
                 <h5>2017 - 2021</h5>
                 <p><em>Himpunan Mahasiswa Maluku, Jakarta </em></p>
-                <p>Devisi Kominfo</p>
+                <p>Devisi Markominfo</p>
               </div>
             </div>
             <div class="col-lg-6">
@@ -379,7 +379,7 @@
               <div class="resume-item">
                 <h4>Reseller</h4>
                 <h5>Januari 2019 - April 2021</h5>
-                <p><em>Jakarta Pusat</em></p>
+                <p><em>Jakarta Timur</em></p>
                 <ul>
                   <li>Mencari berbagai jenis product di onlineshop (Shopee) untuk di jual kembali</li>
                   <li>Memposting berbagai jenis product yang dicari di onlimeshop (Shopee)  ke media sosial seperti fecebook, instagram dan lain lain</li>
@@ -388,9 +388,9 @@
               </div>
 
               <div class="resume-item">
-                <h4>Finance Agen JNE Rifki Hidayat Cilandak</h4>
-                <h5>Januari 2019 - September 2019</h5>
-                <p><em>Jakarta Selatan</em></p>
+                <h4>PT Kumala Kencana Cipta</h4>
+                <h5>Februari 2021 - April 2021</h5>
+                <p><em>Jakarta Barat (WFH)</em></p>
                 <ul>
                   <li>Mengoperasikan dua akun di Tokopedia dengan Brand yang berbeda</li>
                   <li>Membuat laporan harian seperti Tarikan Order, Tarikan Dana, Dialy Report, dan Closing</li>
@@ -757,9 +757,9 @@
         <h3>Liedy Narti Muhammad Ramping</h3>
         <p>Terimakasih telah berkunjung</p>
         <div class="social-links">
-          <a href="https://wa.me/6281380553988" class="whatsapp" target="_blank"><i class="bx bxl-whatsapp"></i></a>
-          <a href="https://www.instagram.com/fahmi_zamzami/" class="instagram" target="_blank"><i class="bx bxl-instagram"></i></a>
-          <a href="https://www.facebook.com/fahmi.zamzami.752" class="linkedin" target="_blank"><i class="bx bxl-facebook"></i></a>
+          <a href="https://wa.me/082123299528" class="whatsapp" target="_blank"><i class="bx bxl-whatsapp"></i></a>
+          <a href="https://www.instagram.com/lyd_gsng/" class="instagram" target="_blank"><i class="bx bxl-instagram"></i></a>
+          <a href="https://www.facebook.com/liedymr.nonalie" class="linkedin" target="_blank"><i class="bx bxl-facebook"></i></a>
         </div>
         <div class="copyright">
           &copy; Copyright <strong><span>wan_gsng</span></strong>. All Rights Reserved
