--- a/index.html
+++ b/index.html
@@ -396,6 +396,17 @@
                   <li>Membuat laporan harian seperti Tarikan Order, Tarikan Dana, Dialy Report, dan Closing</li>
                 </ul>
               </div>
+              <div class="resume-item">
+                <h4>eceptionist BeArt Korean Skin Clinic</h4>
+                <h5>Februari 2023 - Agustus 2023</h5>
+                <p><em>Jakarta Selatan</em></p>
+                <ul>
+                  <li>Mengolah data pasien secara komputasi</li>
+                  <li>Mengolah data kasir</li>
+                  <li>Membuat appoitmen</li>
+                  <li>Follow-up pasien</li>
+                </ul>
+              </div>
 
             </div>
           </div>
