--- a/index.html
+++ b/index.html
@@ -397,7 +397,7 @@
                 </ul>
               </div>
               <div class="resume-item">
-                <h4>eceptionist BeArt Korean Skin Clinic</h4>
+                <h4>Receptionist BeArt Korean Skin Clinic</h4>
                 <h5>Februari 2023 - Agustus 2023</h5>
                 <p><em>Jakarta Selatan</em></p>
                 <ul>
